fix error message text-align

--- a/src/content_scripts/style.css
+++ b/src/content_scripts/style.css
@@ -135,6 +135,7 @@ xmet {
 
 .metwords-message {
 	display: block !important;
+	text-align: left !important;
 	padding: 10px 10px !important;
 	font-size: 16px !important;
 	line-height: 1.2em !important;
